add api key feature
